--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:theme="@style/Theme.MVVM"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".sub.SubActivity"
+            android:exported="false"
+            android:label="@string/title_activity_sub"
+            android:theme="@style/Theme.MVVM.NoActionBar" />
+        <activity
+            android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
